--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -480,9 +480,19 @@ input[type="checkbox"].input-validation-error {
     font-weight:bold;
 }
 
+.coach-fall-credit {
+    color: #017101;
+    font-size: 1.3rem;
+}
+
+.coach-fall-no-credit {
+    color: #ff0000;
+    font-size: 1.3rem;
+}
+
 .coach-fall-background {
     border-radius: 1rem;
-    background-color: #d3d3d3eb;
+    background-color: #d3d3d3;
     border:2px solid red;
 }
 .coach-fall-timer {
@@ -492,10 +502,42 @@ input[type="checkbox"].input-validation-error {
 .updates-area {
     background-color: #373747;
     color: #ffffff /*{c-bup-color}*/;
-    font-size: .8rem;
-    position: absolute;
-    right: 0px;
-    top: 0px;
+   
+    width: 200px;
+    height:100%;
+    z-index:100;
+}
+
+.update-message {
+    margin-bottom:.25rem;
+}
+
+.update-routine-start {
+    cursor:pointer;
+}
+
+.update-holder {
     height: 100%;
-    width: 200px
+    max-height: 720px;
+    overflow: auto;
+    font-size: .65rem;
+}
+
+.update-holder::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+.update-holder::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+.update-holder::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+.update-holder::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
