--- a/STSEval/app/templates/app/spectate.html
+++ b/STSEval/app/templates/app/spectate.html
@@ -130,12 +130,19 @@
             console.log(change);
             if (change.type === "added") {
                 docdata = change.doc.data();
-                if (docdata.type == 'routine_start')
-                    $("#divUpdates").prepend("<div class='update-message update-routine-start' onclick='FeedSwapEvent(\"" + docdata.event + "\")'>" + docdata.message + "</div>");
-                else
-                    $("#divUpdates").prepend("<div class='update-message'>" + docdata.message + "</div>");
+                if (docdata.type == 'routine_start') {
+                    let message = "<span class='update-message-header'>" + docdata.athlete_display + "</span><br/>" + "Starting Exercise " + docdata.event;
+                    $("#divUpdates").prepend("<div id='divUpdate" + docdata.id + "' class='update-message update-routine-start' align='center' onclick='FeedSwapEvent(\"" + docdata.event + "\")' style='display:none'>" + message + "</div>");
+                    
+                }
+                else {
+                    let message = "<span class='update-message-header'>" +docdata.athlete_display + "</span><br/>" + "Scored " + docdata.score + " on " + docdata.event;
+                    $("#divUpdates").prepend("<div id='divUpdate" + docdata.id + " class='update-message' align='center' style='display:none'>" + message + "</div>");
+                }
+                $("#divUpdate" + docdata.id).show('slow');
             }
         });
+        FirstUpdateShow = false;
     }
 
     function SetEventListeners(which) {
