--- a/STSEval/app/templates/app/update_area.html
+++ b/STSEval/app/templates/app/update_area.html
@@ -2,5 +2,5 @@
     <div class="pt-1 pb-1" style="background-color:#313184" align="center">
         Updates <i class="fa fa-rss" aria-hidden="true"></i>
     </div>
-    <div id="divUpdates" class="update-holder pr-1 pl-2"></div>
+    <div id="divUpdates" class="update-holder"></div>
 </div>
