--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -502,10 +502,13 @@ input[type="checkbox"].input-validation-error {
 .updates-area {
     background-color: #373747;
     color: #ffffff /*{c-bup-color}*/;
-   
+    overflow: auto;
+    font-size: .7rem;
+    transition: all 2s;
     width: 200px;
-    height:100%;
-    z-index:100;
+    height: 100%;
+    z-index: 100;
+    max-height:85vh;
 }
 
 .update-message {
@@ -523,29 +526,45 @@ input[type="checkbox"].input-validation-error {
     cursor:pointer;
 }
 
-.update-holder {
-    height: 100%;
-    max-height: 720px;
-    overflow: auto;
-    font-size: .7rem;
-    transition: all 2s;
-}
-
-.update-holder::-webkit-scrollbar {
+.updates-area::-webkit-scrollbar {
     width: 10px;
 }
 
 /* Track */
-.update-holder::-webkit-scrollbar-track {
+.updates-area::-webkit-scrollbar-track {
     background: #f1f1f1;
 }
 
 /* Handle */
-.update-holder::-webkit-scrollbar-thumb {
+.updates-area::-webkit-scrollbar-thumb {
     background: #888;
 }
 
 /* Handle on hover */
-.update-holder::-webkit-scrollbar-thumb:hover {
+.updates-area::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
+
+.spectate_start_list_container {
+    height:75px;
+    overflow:auto;
+}
+
+    .spectate_start_list_container::-webkit-scrollbar {
+        width: 10px;
+    }
+
+/* Track */
+    .spectate_start_list_container::-webkit-scrollbar-track {
+        background: #f1f1f1;
+    }
+
+/* Handle */
+    .spectate_start_list_container::-webkit-scrollbar-thumb {
+        background: #888;
+    }
+
+    /* Handle on hover */
+        .spectate_start_list_container::-webkit-scrollbar-thumb:hover {
+            background: #555;
+        }
