--- a/STSEval/app/templates/app/update_area.html
+++ b/STSEval/app/templates/app/update_area.html
@@ -1,6 +1,5 @@
-<div id="divUpdatesContainer" align="left" class="updates-area">
-    <div class="pt-1 pb-1" style="background-color:#313184" align="center">
+<div class="pt-1 pb-1" style="background-color:#313184" align="center">
         Updates <i class="fa fa-rss" aria-hidden="true"></i>
     </div>
-    <div id="divUpdates" class="update-holder"></div>
+<div id="divUpdates" class="updates-area">
 </div>
