--- a/STSEval/app/templates/app/spectate.html
+++ b/STSEval/app/templates/app/spectate.html
@@ -23,7 +23,7 @@
                     
                             <div id="player-waiting1" style="height:480px;display:flex" class="align-items-center"><h1>Waiting for Camera</h1></div>
                             <video id="player-video1" class="live-video" style="display:none" controls autoplay muted></video>
-                            <div id="divStartList1" align="center" class="spectate_start_list_container"></div>
+                            <div id="divStartList1" align="center" class=" mt-1 spectate_start_list_container"></div>
                         </div>
                         
                     </div>
