--- a/STSEval/app/templates/app/spectate.html
+++ b/STSEval/app/templates/app/spectate.html
@@ -85,7 +85,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsgrid/1.5.3/jsgrid.min.js"></script>
 <!--<script src="https://vjs.zencdn.net/7.6.6/video.js"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-<script src="{% static 'app/scripts/stream_listener_spectator_hls.js' %}?v=1.1"></script>
+<script src="{% static 'app/scripts/stream_listener_spectator_hls.js' %}?v=1.2"></script>
 <script type="text/javascript">
     var ev = new Array();
     {% if display_type == 'single' %}
@@ -257,19 +257,21 @@
         $("#divStartList" + which).load("/athlete_start_list_spectate/" + ev[which], function()
         {
             let active = $($("#divStartList" + which).children(0).children(0).children(0)[1]).val();
-            console.log(active);
+            //console.log(active);
             let trs = $("#divStartList" + which).children(0).children(0).children(0)[0];
-            console.log(trs);
-            active = $(trs).find($("#" + active));
-            console.log(active);
-            //normal middle of pack
-            if ($(active).prev().length >= 1 && $(active).next().length >= 1) 
-                $("#divStartList" + which)[0].scrollTop = $(active).prev()[0].offsetTop;//$(active).prev()[0].scrollIntoView(true);
-            else if ($(active).prev().length == 0) //no previous
-                 $("#divStartList" + which)[0].scrollTop = $(active)[0].offsetTop;
-            else
-               $("#divStartList" + which)[0].scrollTop = $(active)[0].offsetTop;
-            SetStartListDot(doc,which);
+           // console.log(trs);
+            if (active != "trStartList-1") {
+                active = $(trs).find($("#" + active));
+                //console.log(active);
+                //normal middle of pack
+                if ($(active).prev().length >= 1 && $(active).next().length >= 1)
+                    $("#divStartList" + which)[0].scrollTop = $(active).prev()[0].offsetTop;//$(active).prev()[0].scrollIntoView(true);
+                else if ($(active).prev().length == 0) //no previous
+                    $("#divStartList" + which)[0].scrollTop = $(active)[0].offsetTop;
+                else
+                    $("#divStartList" + which)[0].scrollTop = $(active)[0].offsetTop;
+                SetStartListDot(doc, which);
+            }
             //if (dual)
                 //$("#divScoreboard2").html($("#divScoreboard").html());
         });
