--- a/STSEval/app/templates/app/evideo.html
+++ b/STSEval/app/templates/app/evideo.html
@@ -399,7 +399,7 @@
                 $("#lblDifficulty").html(data['score_difficulty']);
                 $("#lblGroups").html(data['score_groups']);
                 $("#lblBonus").html(data['score_bonus']);
-                $("#lblConnection").html(FormatWith0(data['score_connection']));
+                $("#lblConnection").html(data['score_connection']);
                 $("#lblNeutralDed").html(data['score_neutral']);
                 $("#lblDScore").html(data['score_d']);
                 $("#divET1").html(data['score_e1']);
