hide updates if small

--- a/STSEval/app/templates/app/spectate.html
+++ b/STSEval/app/templates/app/spectate.html
@@ -74,7 +74,7 @@
                </div>
             </div>
         </div>
-        <div style="width:200px" class="ml-2">{% include "app/update_area.html" %} </div>
+        <div style="width:200px" class="ml-2 d-md-block d-none">{% include "app/update_area.html" %} </div>
     </div>
    </div>
 {% endblock %}
