Fancy rotation setup and blocking cams

--- a/STSEval/app/templates/app/overview.html
+++ b/STSEval/app/templates/app/overview.html
@@ -98,6 +98,7 @@
     var CurrentAthlete = -1;
     var db = firebase.firestore();
     firebase.firestore.setLogLevel('debug');
+    var Status = "";
     var BackupVideo = -1;
     var Overview = true;
     var CurrentSL = -1
