--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -71,14 +71,14 @@
                 </div>
             {% endif %}
           
-            <div id="divDotsHolder" style="position:relative;max-width:852px;height:100px;display:flex">
-	            <div id="divDotsArea" class="DotsArea flex-grow-1" style="max-width:852px;height:100px;">
+            <div id="divDotsHolder" style="position:relative;max-width:852px;height:110px;display:flex">
+	            <div id="divDotsArea" class="DotsArea flex-grow-1" style="max-width:852px;height:110px;">
 	           
 	            </div>
-                 <div id="divDotsAreaGlobal" style="position:relative;width:100px;height:100px;border-top:1px solid black;border-right:1px solid black;border-bottom:1px solid black;background-color:#373748;float:left">
+                 <div id="divDotsAreaGlobal" style="position:relative;width:100px;height:110px;border-top:1px solid black;border-right:1px solid black;border-bottom:1px solid black;background-color:#373748;float:left">
 	   
 	            </div>    
-                <div id="divEJudges" align="left" style="float:left;padding-left:5px;padding-top:5px;position:absolute;top:0px;left:0px;">
+                <div id="divEJudges" align="left" style="float:left;padding-left:5px;padding-top:15px;position:absolute;top:0px;left:0px;">
 	  		        <div>
 		                <table cellspacing="0" border=0 cellpadding="0">
 			                <tr id="trE1">
@@ -1790,7 +1790,8 @@
             data: {
                 'athlete': CurrentAthlete,
                 'fall': fall,
-                'event':ev,
+                'event': ev,
+                'routine':RoutineID,
             },
             success: function (data) {
                 if (fall) {
@@ -1820,7 +1821,8 @@
             data: {
                 'athlete': CurrentAthlete,
                 'credit': credit,
-                'event':ev,
+                'event': ev,
+                'routine':RoutineID,
             },
             success: function (data) {
                
